# methylbert

./: .gitignore  Dockerfile  README.md  environment.yml  pyproject.toml  requirements.txt  run_build.sh  setup.py
.github/workflows/: documentation.yml  gh-pages.yml
config/: deconvolute_config.json  finetune_config.json  preprocess_finetune_config.json
docs/: .gitignore  Gemfile  _config.yml  conf.py  index.markdown  index.rst  requirements.txt  run_build.sh
docs/_posts/: 2024-07-10-welcome-to-jekyll.markdown
docs/source/: cmd_entry.md  conf.py  index.rst  lib_entry.md
docs/source/tutorials/: 02_Preprocessing_training_data.md  03_Preprocessing_bulk_data.ipynb  03_Preprocessing_bulk_data.md  04_Fine-tuning_MethylBERT_model.ipynb  05_tumour_deconvolution.ipynb  05_tumour_deconvolution.md
docs/tutorials/: 04_Fine-tuning_MethylBERT_model.md
methylbert/: deconvolve.py  network.py  trainer.py  utils.py
methylbert.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
methylbert/data/: dataset.py  finetune_data_generate.py  genome.py  simulation.py  vocab.py
src/: cli.py
src/methylbert/: __init__.py  cli.py  config.py  deconvolute.py  deconvolve_plot.py  function.py  modeling_methylbert.py  network.py  trainer.py  utils.py
src/methylbert/data/: bam.py  dataset.py  dataset_bam.py  finetune_data_generate.py  vocab.py
test/: test_deconvolute.py  test_finetune.py  test_finetune_preprocess.py
test/data/: dmrs.csv
test/data/processed/: dmrs.csv  test_seq.csv  train_seq.csv
tutorials/: 01_Data_Preparation.md  02_Preprocessing_training_data.ipynb  04_Fine-tuning_MethylBERT_model.ipynb  05_tumour_deconvolution.ipynb
