[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "methylbert"
version = "2.0.2"
description = "A Transformer-based model for read-level DNA methylation pattern identification and tumour deconvolution"
authors = [
    { name = "Yunhee Jeong", email = "y.jeong@dkfz-heidelberg.de" }
]
readme = "README.md"
license = {file = "LICENSE"}

dependencies = [
    "biopython==1.84",
    "matplotlib==3.9.2",
    "numpy==2.1.1",
    "pandas==2.2.2",
    "pysam==0.22.1",
    "scikit-learn==1.5.1",
    "scipy==1.14.1",
    "torch==2.4.1",
    "tqdm==4.66.5",
    "transformers==4.44.2",
    "tokenizers==0.19.1",
    "urllib3==2.2.2",
    "zipp==3.13.0"
]
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]
include = ["methylbert*"]
exclude = ["methylbert/cli.py"]

[tool.setuptools.package-data]
"test" = ["*"]
recipe = ["*.py"]

[project.entry-points.console_scripts]
methylbert = "methylbert.cli:main"
